--- a/react-estate/index.html
+++ b/react-estate/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Real Estate</title>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Alata&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Baskervville:ital@0;1&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Baskervville:ital@0;1&family=Birthstone&family=Birthstone+Bounce:wght@400;500&display=swap");
+    </style>
     <meta name="description" content="Buy, Sell and Rent Properties" />
     <link rel="stylesheet" href="src/index.css" />
   </head>
